--- a/HoganExpressApp/package.json
+++ b/HoganExpressApp/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "mongodb": "1.4.0",
+    "monk": "0.8.1",
     "express": "~4.0.0",
     "static-favicon": "~1.0.2",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.1",
+    "body-parser": "~1.0.2",
     "debug": "~0.8.0",
     "hjs": "~0.0.6",
     "generator-flight": "~0.7.2",
-    "gulp": "~3.6.0",
+    "gulp": "~3.6.1",
     "gulp-livereload": "~1.3.1",
     "karma": "~0.12.9",
     "karma-jasmine": "~0.1.5",
