--- a/HoganExpressApp/bower.json
+++ b/HoganExpressApp/bower.json
@@ -7,6 +7,11 @@
     "requirejs": "~2.1.5"
   },
   "devDependencies": {
-    "jasmine-flight": "~2.2.0"
+    "jasmine-flight": "~2.2.0",
+    "jasmine": "~2.0.0",
+    "jasmine-jquery": "~2.0.3"
+  },
+  "resolutions": {
+    "jasmine-jquery": "~1.7.0"
   }
 }
